@@ -1,3 +1,8 @@
+Wed May 14 14:33:02 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>
+
+	* xe_stubs.adb: Generate task pool bounds
+ 	assignment. Part of Task_Pool attribute implementation.
+
 Mon May  5 21:30:25 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* xe_utils.adb: Changed "delete" into "deleting" and format output
